--- a/h3.md
+++ b/h3.md
@@ -27,9 +27,20 @@ Seuraavaksi githubin ohjeen mukaan uuden repositoryn luominen terminaalissa:
 
 ### d)  Näytä omalla git-varastollasi esimerkit komennoista ‘git log’, ‘git diff’ ja ‘git blame’. Selitä tulokset.
 
+`git log` komento tulostaa commit-historian
+![2]
+
+`git diff` näyttää mitä eroja on githubissa oleviin tiedostoihin verrattuna, vaihdoin kuvan linkkiä
+![3]
+
+`git blame h3.md` komennolla nähtävästi selviää kuka on "syyllinen" tiedostossa tapahtuneisiin muuotoksiin
+![4] 
+
 ### e) Tee tyhmä muutos gittiin, älä tee commit:tia. Tuhoa huonot muutokset ‘git reset –hard’. Huomaa, että tässä toiminnossa ei ole peruutusnappia.	 
 
 ### f) Tee uusi salt-moduli. Voit asentaa ja konfiguroida minkä vain uuden ohjelman: demonin, työpöytäohjelman tai komentokehotteesta toimivan ohjelman. Käytä tarvittaessa ‘find -printf “%T+ %p\n”|sort’ löytääksesi uudet asetustiedostot.
 
-[1]: https://i.gyazo.com/c9f61f9ce844cbc8d7904860312d746f.png "1"
-[2]: 
+[1]: https://i.gyazo.com/9da72827c95044f4cc1a2707e14ae574.png "1"
+[2]: https://i.gyazo.com/a13ba7f2b91af223d722ea11f0c22f5e.png "2"
+[3]: https://i.gyazo.com/31ceb8021e952114bf6cd2c2d468e748.png "3"
+[4]: https://i.gyazo.com/c27766b67b436348eb2172e9b98cf667.png "4"
