--- a/h3.md
+++ b/h3.md
@@ -46,6 +46,15 @@ Kirjoitin readme.md filuun "tyhmä muutos", seuraavaksi poistin muutoksen komenn
 ![5] ![6]
 
 ### f) Tee uusi salt-moduli. Voit asentaa ja konfiguroida minkä vain uuden ohjelman: demonin, työpöytäohjelman tai komentokehotteesta toimivan ohjelman. Käytä tarvittaessa ‘find -printf “%T+ %p\n”|sort’ löytääksesi uudet asetustiedostot.
+Tein moduulin joka asentaa Caffeine ohjelman koneille. Caffeine mm. estää ruudunsäästäjän aktivoitumisen.
+Loin ohjelmalle uuden kansion /srv/salt alle ja sinne init.sls tiedoston:
+![7]
+
+Seuraavaksi suoritin tilan komennolla `sudo salt '*' state.apply caffeine`
+![8]
+Komento onnistui ja caffeine on nyt asennettu, tarkastan kuitenkin löytyykö caffeine koneen hakemistosta
+
+![9]
 
 [1]: https://i.gyazo.com/9da72827c95044f4cc1a2707e14ae574.png "1"
 [2]: https://i.gyazo.com/a13ba7f2b91af223d722ea11f0c22f5e.png "2"
@@ -53,3 +62,6 @@ Kirjoitin readme.md filuun "tyhmä muutos", seuraavaksi poistin muutoksen komenn
 [4]: https://i.gyazo.com/c27766b67b436348eb2172e9b98cf667.png "4"
 [5]: https://i.gyazo.com/d61d588490d67ae738c6adae71a1dc66.png "5"
 [6]: https://i.gyazo.com/5551d4e00531e75544c344889b5eb448.png "6"
+[7]: https://i.gyazo.com/f21ec0446463a0eb460e5946dd0307fd.png "7"
+[8]: https://i.gyazo.com/e213e6c3292ff8b9af369ffcd855eec0.png "8"
+[9]: https://i.gyazo.com/74c3200bd13df7e57f8213e817c3f4ee.png "9"
