Tekstin & kuvien asettelu

--- a/h3.md
+++ b/h3.md
@@ -5,7 +5,8 @@ Tehtävä suoritettu Xubuntu 18.04 virtualbox koneella.
 
 ### b) MarkDown. Tee tämän tehtävän raportti MarkDownina. Tyhjä rivi tekee kappalejaon, risuaita ‘#’ tekee otsikon, sisennys merkitsee koodinpätkän.
 
-Aloitin harjoituksen luomalla github käyttäjätunnukset ja ajamalla terminaalissa seuraavat komennot:
+Aloitin harjoituksen luomalla github käyttäjätunnukset ja ajamalla terminaalissa seuraavat komennot.
+Komennoilla annetaan gitille käyttäjätietoni ja kloonataan hakemisto githubista virtuaalikoneelle.
 
 `git config --global user.email "vili.keltakangas@gmail.com"`
 `git config --global user.name "vili"`
@@ -25,9 +26,11 @@ Seuraavaksi githubin ohjeen mukaan uuden repositoryn luominen terminaalissa:
 `git remote add origin https://github.com/vilipk/icth3.git`
 `git push -u origin main`
 
+icth3 kansioon loin uuden markdown tiedoston h3.md jota käytän raportoimiseen `nano h3.md`
+
 ### d)  Näytä omalla git-varastollasi esimerkit komennoista ‘git log’, ‘git diff’ ja ‘git blame’. Selitä tulokset.
 
-`git log` komento tulostaa commit-historian
+`git log` komento tulostaa muutos / commit-historian.
 
 ![2]
 
@@ -48,13 +51,24 @@ Kirjoitin readme.md filuun "tyhmä muutos", seuraavaksi poistin muutoksen komenn
 ### f) Tee uusi salt-moduli. Voit asentaa ja konfiguroida minkä vain uuden ohjelman: demonin, työpöytäohjelman tai komentokehotteesta toimivan ohjelman. Käytä tarvittaessa ‘find -printf “%T+ %p\n”|sort’ löytääksesi uudet asetustiedostot.
 Tein moduulin joka asentaa Caffeine ohjelman koneille. Caffeine mm. estää ruudunsäästäjän aktivoitumisen.
 Loin ohjelmalle uuden kansion /srv/salt alle ja sinne init.sls tiedoston:
+
 ![7]
 
 Seuraavaksi suoritin tilan komennolla `sudo salt '*' state.apply caffeine`
+
 ![8]
+
 Komento onnistui ja caffeine on nyt asennettu, tarkastan kuitenkin löytyykö caffeine koneen hakemistosta
 
 ![9]
+
+
+##### Lähteet:
+
+http://terokarvinen.com/2016/publish-your-project-with-github/index.html
+http://terokarvinen.com/2020/configuration-management-systems-palvelinten-hallinta-ict4tn022-autumn-2020/#h3-versionhallinta
+
+
 
 [1]: https://i.gyazo.com/9da72827c95044f4cc1a2707e14ae574.png "1"
 [2]: https://i.gyazo.com/a13ba7f2b91af223d722ea11f0c22f5e.png "2"
