--- a/h3.md
+++ b/h3.md
@@ -15,18 +15,26 @@ Komennoilla annetaan gitille käyttäjätietoni ja kloonataan hakemisto githubis
 
 ![1]
 
-Seuraavaksi githubin ohjeen mukaan uuden repositoryn luominen terminaalissa:
+Seuraavaksi, githubin ohjeen mukaan, uuden repositoryn luominen terminaalissa:
 
 `echo "# icth3" >> README.md`
+
 `git init`
+
 `git add README.md`
+
 `git add .`
+
 `git commit -m "first commit"`
+
 `git branch -M main`
+
 `git remote add origin https://github.com/vilipk/icth3.git`
+
 `git push -u origin main`
 
 icth3 kansioon loin uuden markdown tiedoston h3.md jota käytän raportoimiseen `nano h3.md`
+Muutosten päivittäminen githubiin tapahtuu komennolla `git add . && git commit; git pull && git push`
 
 ### d)  Näytä omalla git-varastollasi esimerkit komennoista ‘git log’, ‘git diff’ ja ‘git blame’. Selitä tulokset.
 
@@ -34,11 +42,11 @@ icth3 kansioon loin uuden markdown tiedoston h3.md jota käytän raportoimiseen 
 
 ![2]
 
-`git diff` näyttää mitä eroja on githubissa oleviin tiedostoihin verrattuna, vaihdoin kuvan linkkiä
+`git diff` näyttää mitä eroja tiedostoissa on githubissa oleviin tiedostoihin verrattuna, vaihdoin kuvan linkkiä.
 
 ![3]
 
-`git blame h3.md` komennolla nähtävästi selviää kuka on "syyllinen" tiedostossa tapahtuneisiin muuotoksiin
+`git blame h3.md` komennolla selviää kuka on "syyllinen" tiedostossa tapahtuneisiin muuotoksiin.
 
 ![4] 
 
@@ -58,7 +66,7 @@ Seuraavaksi suoritin tilan komennolla `sudo salt '*' state.apply caffeine`
 
 ![8]
 
-Komento onnistui ja caffeine on nyt asennettu, tarkastan kuitenkin löytyykö caffeine koneen hakemistosta
+Komento onnistui ja caffeine on nyt asennettu, tarkastan kuitenkin löytyykö caffeine koneen hakemistosta.
 
 ![9]![10]
 
