--- a/h3.md
+++ b/h3.md
@@ -1,6 +1,6 @@
 # Palvelinten hallinta H3
 
-Tehtävä suoritettu Xubuntu 18.04 virtualbox koneella.
+Tehtävä suoritettu Xubuntu 18.04 Virtualbox koneella johon valmiiksi asennettuna salt master & slave. 
 
 
 ### b) MarkDown. Tee tämän tehtävän raportti MarkDownina. Tyhjä rivi tekee kappalejaon, risuaita ‘#’ tekee otsikon, sisennys merkitsee koodinpätkän.
@@ -13,9 +13,8 @@ Komennoilla annetaan gitille käyttäjätietoni ja kloonataan hakemisto githubis
 `git config --global credential.helper "cache --timeout=3600"`
 `git clone https://github.com/vilipk/icth3.git`
 
-![1]
 
-Seuraavaksi, githubin ohjeen mukaan, uuden repositoryn luominen terminaalissa:
+Seuraavaksi, githubin ohjeen mukaan, uuden repositoryn luominen terminaalissa tapahtui komennoilla:
 
 `echo "# icth3" >> README.md`
 
@@ -36,13 +35,15 @@ Seuraavaksi, githubin ohjeen mukaan, uuden repositoryn luominen terminaalissa:
 icth3 kansioon loin uuden markdown tiedoston h3.md jota käytän raportoimiseen `nano h3.md`
 Muutosten päivittäminen githubiin tapahtuu komennolla `git add . && git commit; git pull && git push`
 
+![1]
+
 ### d)  Näytä omalla git-varastollasi esimerkit komennoista ‘git log’, ‘git diff’ ja ‘git blame’. Selitä tulokset.
 
 `git log` komento tulostaa muutos / commit-historian.
 
 ![2]
 
-`git diff` näyttää mitä eroja tiedostoissa on githubissa oleviin tiedostoihin verrattuna, vaihdoin kuvan linkkiä.
+`git diff` näyttää mitä eroja tiedostoissa on Githubissa oleviin tiedostoihin verrattuna, vaihdoin kuvan linkkiä.
 
 ![3]
 
